--- a/pages/lot.html
+++ b/pages/lot.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>DC Ply Mens 2016/2017 Snowboard</title>
-  <link href="../css/normalize.min.css" rel="stylesheet">
-  <link href="../css/style.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="main-header__container container">
       <h1 class="visually-hidden">YetiCave</h1>
       <a class="main-header__logo" href="index.html">
-        <img src="../img/logo.svg" width="160" height="39" alt="Логотип компании YetiCave">
+        <img src="/img/logo.svg" width="160" height="39" alt="Логотип компании YetiCave">
       </a>
       <form class="main-header__search" method="get" action="https://echo.htmlacademy.ru" autocomplete="off">
         <input type="search" name="search" placeholder="Поиск лота">
@@ -63,7 +63,7 @@
       <div class="lot-item__content">
         <div class="lot-item__left">
           <div class="lot-item__image">
-            <img src="../img/lot-image.jpg" width="730" height="548" alt="Сноуборд">
+            <img src="/img/lot-image.jpg" width="730" height="548" alt="Сноуборд">
           </div>
           <p class="lot-item__category">Категория: <span>Доски и лыжи</span></p>
           <p class="lot-item__description">Легкий маневренный сноуборд, готовый дать жару в любом парке, растопив
